--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
     }
+
 }
 
 plugins {
@@ -32,6 +33,14 @@ plugins {
 }
 
 apply from: 'https://raw.githubusercontent.com/BuiltBrokenModding/BuiltBrokenScripts/1.12.2/index/index.gradle'
+
+repositories {
+    maven { url 'https://squiddev.cc/maven/' }
+}
+
+dependencies {
+    implementation "org.squiddev:cc-tweaked-1.12.2:1.86.2"
+}
 
 dependencies
 {
